# koairy-backend

./: .dockerignore  .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt  start_server.py
app/: main.py
app/api/: routes.py
app/api/routers/: data_routes.py  prediction_routes.py  simulation_routes.py  utils.py
app/core/: config.py
app/crud/: bremicker.py  emissions.py  hawa_dawa.py
app/db/: mongodb_utils.py  query_database.py
app/models/: data_input.py  prediction_input.py  simulation_input.py  single_simulation_input.py
app/tools/predictor/: lin_reg.py  neural_nets.py  predictor.py
app/tools/predictor/data/airquality/: air_2019_01.json  air_2019_02.json  air_2019_03.json  air_2019_04.json  air_2019_05.json  air_2019_06.json  air_2019_07.json  air_2019_08.json  air_2019_09.json  air_2019_10.json
app/tools/predictor/data/weather/: other_wind_munich_2019.txt  pressure_munich_2019.txt  pressure_munich_2019_old.txt  temp_humidity_munich_2019.txt  temp_humidty_munich_2019_old.txt  wind_munich_2019.txt  wind_munich_2019_old.txt
app/tools/predictor/utils/: air_sensors.py  bremicker_boxes.py  model_preprocessor.py  weather.py
app/tools/simulation/: calc_caqi.py  parse_emission.py  preprocessor.py  simulator.py  single_preprocessor.py
app/tools/simulation/data/traffic-input/: 384_road-network.osm  670_road-network.osm  671_road-network.osm  672_road-network.osm  simulation-default.sumocfg
app/tools/simulation/data/traffic-input/net/: det.add.xml  road-network_384.net.xml  road-network_670.net.xml  road-network_671.net.xml  (+1 more)
