[tool.poetry]
name = "emviz-api"
version = "0.1.0"
description = "API for simulating and predicting emissions"
authors = ["David Schemm <david.schemm@tum.de>"]

[tool.poetry.dependencies]
python = "^3.7"
docker = "^4.1"
xmltodict = "^0.12.0"
numpy = "^1.17"
asyncio = "^3.4"
fastapi = "^0.42.0"
motor = "^2.0"
uvicorn = "^0.9.1"
Flask = "=1.0.2"
lxml = "=4.9.1"
pyproj = "=2.2.0"
matplotlib = "=2.2.4"
pandas = "=0.24.2"
gunicorn = "^19.9"
python-dotenv = "^0.10.3"
databases = "^0.2.5"
scikit-learn = "^0.21.3"
requests = "^2.22"
keras = "^2.3"
tk = "^0.1.0"
"keyrings.alt" = "^3.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
